--- a/svxlink-remote.service
+++ b/svxlink-remote.service
@@ -6,7 +6,7 @@ After=multi-user.target
 Type=simple
 User=root
 ExecStart=/usr/bin/python3 /opt/svxlink-remote/main.py
-Restart=always
+Restart=on-failure
 TimeoutStopSec=300
 
 [Install]
